--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body id="main">
     
     <div class="container">
-            <div class="valentine-message">
+            <div class="valentine-message" id="top">
                     <h1>Will You Be My Valentine?</h1>
             </div>
             
